--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,36 +1,34 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 
+* {
+  font-family: "Raleway", sans-serif;
+}
 
 #conviajes {
-  width: 400px;
-  height: 500px;
-  margin-right: 60px;
+  width: 28rem;
 }
 
 #viajes {
-    background-color: deepskyblue;
-    width: 400px;
+  background-color: deepskyblue;
+  width: 100%;
 }
 
 #condestino {
-  width: 400px;
-  height: 500px;
-  margin-right: 40px;
+  width: 27rem;
 }
 
 #destino {
-    background-color: deepskyblue;
-    width: 400px;
+  background-color: deepskyblue;
+  width: 100%;
 }
 
 #conruta {
-  width: 400px;
-  height: 500px;
+  width: 27rem;
 }
 
 #ruta {
-    background-color: deepskyblue;
-    width: 400px;
+  background-color: deepskyblue;
+  width: 100%;
 }
 
 #navbarw {
@@ -38,13 +36,23 @@
   backdrop-filter: blur(8px);
 }
 
-i{
-    font-size: 40px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+#navbarw a:hover {
+  color: yellow;
 }
 
-#iconosfooter i{
+i {
+  font-size: 40px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+#iconosfooter i {
   font-size: 30px;
   margin-right: 10px;
+  color: white;
+}
+
+.Tituloamarillo{
+  color: yellow;
+  text-decoration: underline;
 }
